<resources>
    <string name="app_name">OpenFoodFacts</string>
    <string name="hello_world">Hello World</string>
    <string name="bar_code">Barcode: %1$s</string>
    <string name="quantity">Quantity : %1$s</string>
    <string name="sell_in">Sold in : %1$s</string>
    <string name="ingredients">Ingredients : %1$s</string>
    <string name="allergic">Allergics substances : %1$s</string>
    <string name="additifs">Additifs : %1$s</string>
    <string name="food_name">%1$s</string>
    <string name="food_brand">%1$s</string>
    <string name="product_list_header">Products</string>
    <string name="nutriscore">Nutriscore : %1$s</string>
    <string name="calories">%1$s kCal/part</string>
    <string name="calories_word">calories</string>
    <string name="fiche">Fiche</string>
    <string name="nutrition">Nutrition</string>
    <string name="table">Tableau</string>
    <string name="nutrionnal_rep_100g">Repères nutritionnels pour 100g</string>
    <string name="fat">Matières grasses / Lipides</string>
    <string name="satured_fat">acides gras saturés</string>
    <string name="glucids">glucides</string>
    <string name="sugar">sucre</string>
    <string name="dietaryFiber">"Fibres alimentaires"</string>
    <string name="proteins">protéines</string>
    <string name="salt">sel</string>
    <string name="sodium">sodium</string>
    <string name="scan_bar_code">Scanner un code-barres</string>
    <string name="details">Détails</string>
    <string name="my_products">Mes produits</string>
</resources>
