<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:contentPaddingBottom="10dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <ImageView
            android:id="@+id/placeholder"
            android:layout_width="0dp"
            android:layout_height="248dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/food_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/placeholder" />

        <TextView
            android:id="@+id/food_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_brand"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/food_name" />
        <ImageView
            android:id="@+id/food_bookmarked"
            android:layout_width="18dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/ic_nav_bar_bookmarks"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="@id/food_name" />

        <ImageView
            android:id="@+id/nutriscore_ic"
            android:layout_width="25dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_ranking"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/food_brand" />

        <TextView
            android:id="@+id/food_nutriscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/nutriscore"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/nutriscore_ic"
            app:layout_constraintStart_toEndOf="@id/nutriscore_ic"
            app:layout_constraintTop_toTopOf="@id/nutriscore_ic" />

        <ImageView
            android:id="@+id/calories_ic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:src="@drawable/ic_calories"
            app:layout_constraintBottom_toBottomOf="@+id/nutriscore_ic"
            app:layout_constraintStart_toEndOf="@id/food_nutriscore"
            app:layout_constraintTop_toBottomOf="@id/food_brand" />

        <TextView
            android:id="@+id/food_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/calories"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/calories_ic"
            app:layout_constraintStart_toEndOf="@id/calories_ic"
            app:layout_constraintTop_toTopOf="@id/calories_ic" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
